--- a/cali.html
+++ b/cali.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Calit Technology Solutions</title>
+  <title>Cali Technology Solutions</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
