--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About Sam</title>
+  <title>My Carrier</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
